review request 16684: Temporarily change ETL workflow mem setting and JVM flags to investigate workflow job OOM issue